Simplify DEFAULT_PARSER_FACTORY instantition
Use a plain assignment in a try/catch block. This favors the usual
case of no problem at instantiation.

Change-Id: I04b56aac2feae11078c5ca4bc42aa010cbf0cce0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>